@@ -12,4 +12,21 @@
   <artifactId>org.eclipse.rse.tests</artifactId>
   <version>3.3.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
+  	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<useUIHarness>true</useUIHarness>
+					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256M</argLine>
+					<includes>
+						<include>**/RSECombinedTestSuite.*</include>
+					</includes>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build> 
 </project>
